@@ -1,5 +1,16 @@
 package org.uniprot.api.statistics.repository;
 
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.containsInAnyOrder;
+import static org.hamcrest.Matchers.empty;
+import static org.uniprot.api.statistics.TestEntityGeneratorUtil.STATISTICS_CATEGORIES;
+import static org.uniprot.api.statistics.TestEntityGeneratorUtil.STATISTICS_ENTRIES;
+import static org.uniprot.api.statistics.entity.EntryType.SWISSPROT;
+
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
+
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -9,25 +20,12 @@ import org.springframework.boot.test.autoconfigure.orm.jpa.TestEntityManager;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.uniprot.api.statistics.entity.UniprotkbStatisticsEntry;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
-
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.containsInAnyOrder;
-import static org.hamcrest.Matchers.empty;
-import static org.uniprot.api.statistics.entity.EntryType.SWISSPROT;
-import static org.uniprot.api.statistics.TestEntityGeneratorUtil.STATISTICS_CATEGORIES;
-import static org.uniprot.api.statistics.TestEntityGeneratorUtil.STATISTICS_ENTRIES;
-
 @ExtendWith(SpringExtension.class)
 @DataJpaTest
 class UniprotkbStatisticsEntryRepositoryIT {
-    @Autowired
-    private TestEntityManager entityManager;
+    @Autowired private TestEntityManager entityManager;
 
-    @Autowired
-    private UniprotkbStatisticsEntryRepository entryRepository;
+    @Autowired private UniprotkbStatisticsEntryRepository entryRepository;
 
     @BeforeEach
     void setUp() {
@@ -37,38 +35,54 @@ class UniprotkbStatisticsEntryRepositoryIT {
 
     @Test
     void findAllByReleaseNameAndEntryType() {
-        List<UniprotkbStatisticsEntry> results = entryRepository.findAllByReleaseNameAndEntryType("rel0", SWISSPROT);
+        List<UniprotkbStatisticsEntry> results =
+                entryRepository.findAllByReleaseNameAndEntryType("rel0", SWISSPROT);
 
-        assertThat(results, containsInAnyOrder(STATISTICS_ENTRIES[0], STATISTICS_ENTRIES[1], STATISTICS_ENTRIES[3]));
+        assertThat(
+                results,
+                containsInAnyOrder(
+                        STATISTICS_ENTRIES[0],
+                        STATISTICS_ENTRIES[1],
+                        STATISTICS_ENTRIES[3],
+                        STATISTICS_ENTRIES[4]));
     }
 
     @Test
     void findAllByReleaseNameAndEntryType_whenNoMatch() {
-        List<UniprotkbStatisticsEntry> results = entryRepository.findAllByReleaseNameAndEntryType("rel1", SWISSPROT);
+        List<UniprotkbStatisticsEntry> results =
+                entryRepository.findAllByReleaseNameAndEntryType("rel1", SWISSPROT);
 
         assertThat(results, empty());
     }
 
     @Test
     void findAllByReleaseNameAndEntryTypeAndStatisticsCategoryIdIn() {
-        List<UniprotkbStatisticsEntry> results = entryRepository.findAllByReleaseNameAndEntryTypeAndStatisticsCategoryIdIn("rel0", SWISSPROT,
-                Arrays.asList(STATISTICS_CATEGORIES));
+        List<UniprotkbStatisticsEntry> results =
+                entryRepository.findAllByReleaseNameAndEntryTypeAndStatisticsCategoryIdIn(
+                        "rel0",
+                        SWISSPROT,
+                        List.of(STATISTICS_CATEGORIES[0], STATISTICS_CATEGORIES[1]));
 
-        assertThat(results, containsInAnyOrder(STATISTICS_ENTRIES[0], STATISTICS_ENTRIES[1], STATISTICS_ENTRIES[3]));
+        assertThat(
+                results,
+                containsInAnyOrder(
+                        STATISTICS_ENTRIES[0], STATISTICS_ENTRIES[1], STATISTICS_ENTRIES[3]));
     }
 
     @Test
     void findAllByReleaseNameAndEntryTypeAndStatisticsCategoryIdIn_whenSingleCategoryPassed() {
-        List<UniprotkbStatisticsEntry> results = entryRepository.findAllByReleaseNameAndEntryTypeAndStatisticsCategoryIdIn("rel0", SWISSPROT,
-                Collections.singletonList(STATISTICS_CATEGORIES[0]));
+        List<UniprotkbStatisticsEntry> results =
+                entryRepository.findAllByReleaseNameAndEntryTypeAndStatisticsCategoryIdIn(
+                        "rel0", SWISSPROT, List.of(STATISTICS_CATEGORIES[0]));
 
         assertThat(results, containsInAnyOrder(STATISTICS_ENTRIES[0], STATISTICS_ENTRIES[1]));
     }
 
     @Test
     void findAllByReleaseNameAndEntryTypeAndStatisticsCategoryIdIn_whenNoCategoryPassed() {
-        List<UniprotkbStatisticsEntry> results = entryRepository.findAllByReleaseNameAndEntryTypeAndStatisticsCategoryIdIn("rel0", SWISSPROT,
-                Collections.emptyList());
+        List<UniprotkbStatisticsEntry> results =
+                entryRepository.findAllByReleaseNameAndEntryTypeAndStatisticsCategoryIdIn(
+                        "rel0", SWISSPROT, Collections.emptyList());
 
         assertThat(results, empty());
     }
